@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+autogen.sh: Error out if the various programs called aren't successful. This
+  means we can hopefully get the first error in bug reports instead of errors
+  caused by the first error later.
+Arvid Norlander 2009-02-26
+
 server/attack.c: Fix for bug 2019648: Too high experience gain with draining
     monsters.  Don't add more exp to monsters than the player lost by draining.
     Record original exp of player before draining and use that as a check in
